--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@azure/msal-browser": "^4.15.0",
     "@azure/msal-react": "^3.0.15",
     "axios": "^1.10.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-confirm-alert": "^3.0.6",
