--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.15.0",
     "@azure/msal-react": "^3.0.15",
+    "@react-pdf/renderer": "^4.3.1",
     "axios": "^1.10.0",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
